tests/baselines/reference/parserMemberAccessorDeclaration11(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
parserMemberAccessorDeclaration11.ts(2,5): error TS1031: 'declare' modifier cannot appear on class elements of this kind.
parserMemberAccessorDeclaration11.ts(2,17): error TS2378: A 'get' accessor must return a value.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== parserMemberAccessorDeclaration11.ts (2 errors) ====
    class C {
        declare get Foo() { }
        ~~~~~~~
!!! error TS1031: 'declare' modifier cannot appear on class elements of this kind.
                    ~~~
!!! error TS2378: A 'get' accessor must return a value.
    }